# tinyfloat

./: CMakeLists.txt  README.md  digits.h  paranoia.cpp  printer.cpp  printer.h  test.cpp  tests.cpp  tinyfloat.cpp  tinyfloat.h
tests/: CMakeLists.txt  addition.cpp  arithmetic.cpp  comparisons.cpp  paranoia.cpp  printer.cpp  roundtrip-float.cpp  roundtrip-int.cpp
